--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
 title: Joseph Outa
 logo: /assets/img/logo.png
 description: Hi. I'm Joseph.
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-minimal
