--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 title: Joseph Outa
 logo: /assets/img/logo.png
-description:
+description: research coordinator @ Stanford Social Learning Lab
 show_downloads: false
 google_analytics:
