--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,5 @@ title: Joseph Outa
 logo: /assets/img/logo.png
 description: research coordinator @ Stanford SLL
 show_downloads: false
-google_analytics:
+google_analytics
+favicon: true
