--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,17 @@
 remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-  - jekyll-sitemap
-#  - jekyll-seo-tag
-#  - jemoji
-  - jekyll-remote-theme
 title: Joseph Outa
+email: joouta at stanford dot edu
 logo: /assets/img/logo.png
 description: research coordinator @ Stanford SLL
 show_downloads: false
 google_analytics
 favicon: true
+
+plugins:
+  - jekyll-sitemap
+#  - jekyll-seo-tag
+#  - jemoji
+  - jekyll-remote-theme
 
 sidebar:
   - name: CV
