--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-remote_theme: pages-themes/minimal@v0.2.0
+#remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: BDHU/minimalist
 title: Joseph Outa
 email: joouta at stanford dot edu
 logo: /assets/img/logo.png
@@ -6,6 +7,7 @@ description: research coordinator @ Stanford SLL
 show_downloads: false
 # google_analytics
 favicon: true
+
 
 plugins:
   - jekyll-sitemap
