add remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ baseurl: # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 #feature_img: /images/wallpaper/skyline1_crop.jpg
+remote_theme: lake-lab/lake-lab.github.io
 
 
 # -----------------------------------------------------------------------------
