--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ news_limit: 5
 # -----------------------------------------------------------------------------
 
 # Includes & excludes
-include: [_pages, blog]
+include: [_pages, index.md, blog]
 exclude:
   - bin
   - index.md
