--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ news_limit: 5
 # -----------------------------------------------------------------------------
 
 # Includes & excludes
-include: [_pages/projects.md, index.md, blog]
+include: [projects.md, index.md, blog]
 exclude:
   - bin
   - Gemfile
