--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ news_limit: 5
 
 # Includes & excludes
 # include: [_pages, index.md, blog]
-include: [projects.md, index.md, blog]
+include: [projects.md, index.md, blog, _pages]
 
 exclude:
   - bin
