update favicon and social info

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
+# this is the ai-folio template: https://github.com/alshedivat/al-folio/blob/master/_config.yml (lake-lab version)
 # -----------------------------------------------------------------------------
-# Site settings
+# Site settings: 
 # -----------------------------------------------------------------------------
 
 title: My Website # the website title (if blank, full name will be used instead)
@@ -19,6 +20,27 @@ last_updated: false # set to true if you want to display last updated in the foo
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 #feature_img: /images/wallpaper/skyline1_crop.jpg
 remote_theme: lake-lab/lake-lab.github.io
+
+
+# -----------------------------------------------------------------------------
+# Social integration
+# -----------------------------------------------------------------------------
+
+github_username: JosephOuta # your GitHub user name
+gitlab_username: # your GitLab user name
+twitter_username: outa_joseph # your Twitter handle
+mastodon_username: # your mastodon instance+username in the format instance.tld/@username
+linkedin_username: # your LinkedIn user name
+telegram_username: # your Telegram user name
+scholar_userid: # your Google Scholar ID
+semanticscholar_id: # your Semantic Scholar ID
+orcid_id: # your ORCID ID
+medium_username: # your Medium username
+quora_username: # your Quora username
+publons_id: # your ID on Publons
+research_gate_profile: # your profile on ResearchGate
+stackoverflow_id: # your stackoverflow id
+kaggle_id: # your kaggle id
 
 
 # -----------------------------------------------------------------------------
@@ -104,7 +126,7 @@ enable_math:                false   # enables math typesetting (uses MathJax)
 enable_tooltips:            false  # enables automatic tooltip links generated
                                    # for each section titles on pages and posts
 enable_darkmode:            false   # enables switching between light/dark modes
-enable_navbar_social:       false  # enables displaying social links in the
+enable_navbar_social:       true  # enables displaying social links in the
                                    # navbar on the about page
 enable_project_categories:  true   # enables categorization of projects into
                                    # multiple categories
