--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Site settings: 
 # -----------------------------------------------------------------------------
 
-title: My Website # the website title (if blank, full name will be used instead)
+title: Joseph Outa # the website title (if blank, full name will be used instead)
 first_name: You
 middle_name: R.
 last_name: Name
